syntax = "proto3";

package go.micro.srv.product;

service ProductService {
    rpc FindFarmerProduct(QueryParams) returns (Response){}
}

message Product {
    string id = 1;
    string name = 2;
    int32 available = 3;
    int32 quantity = 4;
    string farmer_id = 5;
    // repeated Image image = 6;
    // string createdAt = 7;
    // string updatedAt = 8;
    // bool isConfirmed = 9;
    // bool isVerified = 10;
}

message Image {
    string id = 1;
    string path = 2;
    string type = 3;
}

message QueryParams {
    string farmer_id = 1;
    int32 category_id = 2;
    int32 quantity = 3;
}

message Response {
    Product product = 1;
    repeated Product products = 2;
}